# abyss

./: .gitignore  LICENSE  README.md  monitor.mjs  original_styles.css  package-lock.json  package.json
.github/workflows/: release.yml
sniffer-core/: CMakeLists.txt  abyss-sniffer.manifest  build.bat
sniffer-core/src/: aggregator.cpp  aggregator.hpp  capture.cpp  capture.hpp  flow_table.cpp  flow_table.hpp  main.cpp  metrics.hpp  ring_buffer.hpp  telemetry_schema.hpp  ws_broadcaster.cpp  ws_broadcaster.hpp
tauri-host/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-host/src-tauri/capabilities/: default.json
tauri-host/src-tauri/icons/: icon.icns
tauri-host/src-tauri/src/: db.rs  lib.rs  main.rs  writer.rs
visualizer/: eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visualizer/src/: App.tsx  styles.css
visualizer/src/components/: AnalyticsDashboard.tsx  CommandPalette.tsx  ErrorBoundary.tsx  NetworkMap.tsx  PlaybackTimeline.tsx  SessionComparison.tsx  SessionDetail.tsx  SessionDrawer.tsx  StatsPanel.tsx  TopBar.tsx  UPlotChart.tsx
visualizer/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  dialog.tsx  popover.tsx  scroll-area.tsx  select.tsx  separator.tsx  skeleton.tsx  slider.tsx  sonner.tsx  switch.tsx  tabs.tsx  toggle-group.tsx  tooltip.tsx
visualizer/src/lib/: hooks.ts  utils.ts
visualizer/src/telemetry/: cables.ts  client.ts  schema.ts  sessions.ts  store.ts
