[package]
name = "abyss"
version = "0.1.0"
description = "Abyss — Living abyssal ecosystem network visualizer"
authors = ["Abyss Project"]
edition = "2021"

[lib]
name = "abyss_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
